# duroot-desktop

./: .eslintrc.json  README.md  package-lock.json  package.json
.github/actions/update-gist/: action.yml  index.js
.github/workflows/: publish.yml  release.yml
.github/workflows/update-gist/: index.js
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  notify.rs  spotlight.rs
src/components/: Button.tsx  Input.tsx  Spinner.tsx
src/components/auth/: welcome.tsx
src/components/common/: avatar.tsx  header.tsx  input.tsx
src/components/github/: Pull.tsx  approved-label.tsx  empty.tsx  header.tsx  my-pull-item.tsx  my-pull-list.tsx  pull-item.tsx  pull-list.tsx  tab-list.tsx
src/hooks/: create-app-version.ts  create-auth-signal.ts  create-cached-resource.ts  create-local-storage-signal.ts  create-tab-count-query.ts  create-tabs-signal.ts  createLocalStorageSignal.ts
src/models/: pull-request-list-view-item.ts
src/pages/: auth.tsx  home.tsx  main.tsx  pulls.tsx  settings.tsx
src/stores/: auth.ts
src/types/: github.ts
src/utils/: cache.ts  database.ts  date.ts  github-api.ts
