[package]
name = "duroot-desktop"
version = "0.2.6"
description = "Desktop applications that gather and view information related to GitHub"
authors = ["hyeongyuan"]
license = "MIT"
repository = "https://github.com/hyeongyuan/duroot-desktop"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["fs-all", "macos-private-api", "path-all", "shell-open", "system-tray", "updater"] }
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cocoa = "0.24.1"
objc = "0.2.7"
objc-foundation = "0.1.1"
objc_id = "0.1.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
